--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,31 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.custom-wide-popover {
+  div .popover-content {
+      width: auto;
+      height: auto;
+      left: 20px !important;
+      right: 20px !important;
+      top: 20px !important;
+      bottom: 0px !important;
+
+      //為了讓 page 放入 popover 不會因為 內容延展 導致 header footer 無法正常定位
+      overflow: hidden;
+  }
+  //為了讓 page 放入 popover 不會因為 內容延展 導致 header footer 無法正常定位
+  div .popover-viewport {
+    height: 100%;
+  }
+  //為了讓 page 放入 popover 不會因為 內容延展 導致 header footer 無法正常定位
+  div .scroll-content {
+    height: 100%;
+  }
+  ion-backdrop {
+      opacity: 0.4;
+  }
+  ion-content {
+    height: 100%;
+  }
+}
