增加 內嵌 方法

--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,10 @@
 page-contact {
-
+  page-about {
+    .scroll-content{
+      margin-bottom: 0px !important;
+    }
+    ion-footer {
+      bottom: 0px !important;
+    }
+  }
 }
