--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,6 +1,6 @@
 page-contact {
   page-about {
-    //page margin-bottom margin-top 要自己設定
+    page margin-bottom margin-top 要自己設定
     .scroll-content {
       margin-bottom: 56px !important;
     }
