--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,16 +1,21 @@
+$about-page-header-height: 40px;
+$about-page-footer-height: 40px;
+
 page-about {
   ion-header {
-    height: 40px;//default 56px
+    height: $about-page-header-height;//default 56px
     ion-navbar {
       min-height: 0px !important;//default 56px
     }
   }
   ion-footer {
-    height: 40px;//default 56px
+    height: $about-page-footer-height;//default 56px
     ion-toolbar {
       min-height: 0px !important;//default 56px
     }
   }
+
+  //標題置中用
   ion-title {
     position: absolute;
     top: 0;
